[project]
name = "biorepository-data-wrangling"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "jupyterlite-core==0.7.4",
    "jupyterlab~=4.4.5",
    "notebook~=7.4.5",
    "jupyterlite-pyodide-kernel==0.7.1",
    "jupyterlab-night",
    "jupyterlab-miami-nights",
    "ipywidgets>=8.1.3,<9",
    "ipyevents>=2.0.1",
    "ipympl>=0.8.2",
    "ipycanvas>=0.9.1",
    "plotly>=6,<7",
    "bqplot",
    "faker>=40.11.0",
    "factory-boy>=3.3.3",
]

[tool.uv]
package = false
